# ManyakProje

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md
resources/: player.ass
resources/pacman/: button.ass
resources/randomGame/: player.ass
scripts/: setup-mac.sh  setup-windows.ps1
src/: action.hpp  aiInput.cpp  aiInput.hpp  asset.cpp  asset.hpp  assetManager.cpp  assetManager.hpp  controllerInput.cpp  controllerInput.hpp  entitiy.cpp  entity.cpp  entity.hpp  environment.cpp  environment.hpp  gameMain.cpp  gameMain.hpp  gameState.hpp  input.hpp  inputConfiguration.cpp  inputConfiguration.hpp  inputKey.hpp  inputManager.cpp  inputManager.hpp  inputState.hpp  inputType.hpp  keyboardInput.cpp  keyboardInput.hpp  logger.cpp  logger.hpp  main.cpp  manyakSDL.hpp  manyakSDLimage.hpp  manyakSDLttf.hpp  platform.hpp  random.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  timer.cpp  (+2 more)
src/engine/: action.hpp  aiInput.hpp  assetManager.cpp  component.cpp  component.hpp  componentManager.cpp  componentManager.hpp  controllerInput.hpp  defaultConfiguration.hpp  emptyComponentManager.cpp  emptyComponentManager.hpp  entity.cpp  entity.hpp  environment.cpp  environment.hpp  gameMain.hpp  inputComponent.hpp  inputManager.cpp  inputManager.hpp  inputSystem.cpp  inputSystem.hpp  keyboardInput.cpp  level.hpp  manyakSDL.hpp  master.cpp  master.hpp  physicsSystem2D.cpp  physicsSystem2D.hpp  renderSystem.cpp  renderSystem.hpp  system.cpp  system.hpp  textureComponent.hpp  uiInputComponent.hpp  uiInputSystem.cpp  uiObject.hpp
src/engine/common/: uiObject.cpp
src/engine/ecs/: component.hpp  componentManager.cpp  componentManager.hpp  master.cpp  physics2DComponent.hpp  physicsSystem2D.cpp  physicsSystem2D.hpp  renderSystem.cpp  system.cpp  system.hpp  transformComponent.hpp  uiInputSystem.hpp
src/engine/input/: controllerInput.cpp  inputKey.hpp  keyboardInput.hpp
src/engine/render/: asset.cpp  asset.hpp  assetManager.cpp  assetManager.hpp  assetState.cpp  assetState.hpp  renderer.cpp  textAsset.cpp  textAsset.hpp  texture.cpp  texture.hpp
src/engine/utility/: logger.cpp  logger.hpp  random.cpp
src/games/pacman/inputConfigurations/: playerAi.cpp  playerConfiguration.cpp  playerKeyboardConfiguration.cpp  playerKeyboardConfiguration.hpp
src/games/pacman/levels/: introLevel.cpp  introLevel.hpp
src/games/randomGame/: main.cpp
src/games/randomGame/objects/: gameObject.hpp  uiObject.cpp
src/inputConfigurations/: defaultConfiguration.cpp  playerAi.cpp  playerAi.hpp  playerConfiguration.hpp  playerKeyboardConfiguration.cpp
src/levels/: freeForAllLevel.cpp  freeForAllLevel.hpp  introLevel.cpp  introLevel.hpp  level.cpp  level.hpp
src/objects/: gameObject.cpp  gameObject.hpp  uiObject.cpp  uiObject.hpp
src/objects/gameObjects/: player.cpp  player.hpp
src/objects/uiObjects/: textObject.hpp  uiButton.cpp  uiButton.hpp  uiText.cpp  uiText.hpp
